hphp/hack/test/typecheck/expression_trees/splice.php.like_types.exp
File "splice.php", line 6, characters 13-13:
Typing error (Typing[4110])
  File "splice.php", line 6, characters 13-13:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
