hphp/hack/test/typecheck/expression_trees/splice.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  $x = Code`4`;
  Code`${$x}`;
}
